# ARCWREN-AI

./: .gitignore  CARL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  security.yml
docs/: architecture.md  configuration.md  security.md  telegram.md
docs/adr/: 0001-event-sourced-runtime.md  0002-single-process-v1.md  0003-no-undocumented-oauth.md  0004-subscription-authentication-through-provider-sidecars.md
docs/superpowers/plans/: 2026-07-13-arcwren-core-tui.md  2026-07-13-arcwren-repository-release.md  2026-07-13-arcwren-telegram.md  2026-07-23-carl-identity-migration.md  2026-07-23-carl-vertical-coding-loop.md  2026-07-24-carl-subscription-auth.md  2026-07-24-carl-subscription-delegates.md
docs/superpowers/specs/: 2026-07-13-arcwren-v1-design.md  2026-07-23-carl-top-tier-harness-design.md
migrations/: 0001_init.sql
src/: cli.rs  error.rs  events.rs  lib.rs  main.rs
src/auth/: mod.rs
src/providers/: mod.rs  scripted.rs
src/runtime/: budget.rs
src/sidecar/: jsonl.rs  mod.rs
src/storage/: mod.rs  repository.rs  schema.rs
tests/: auth_contract.rs  cli_contract.rs  docs_contract.rs  domain_contract.rs  identity_contract.rs  provider_contract.rs  sidecar_contract.rs  storage_contract.rs  workflow_contract.rs
tests/fixtures/provider/: tool_then_answer.json
tests/support/: sidecar.rs
