[package]
name = "arcwren"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
