[package]
name = "carl-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.0"

[lib]
name = "carl"
path = "src/lib.rs"

[[bin]]
name = "carl"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2.0"
tokio-util = "0.7"
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0"
futures-util = "0.3"
predicates = "3.1"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.47", features = ["macros", "rt"] }
