[package]
name = "carl-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.97.0"

[lib]
name = "carl"
path = "src/lib.rs"

[[bin]]
name = "carl"
path = "src/main.rs"

[[test]]
name = "sidecar_contract"
path = "tests/sidecar_contract.rs"
harness = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-core = "0.3"
# Dependency review: process-wrap is pinned to 9.1.0 with only Tokio, Unix process
# groups, and Windows Job Objects enabled. Do not enable its kill-on-drop or
# creation-flags wrappers until watchexec/process-wrap#35 is resolved; Carl uses
# Tokio's leader-only fallback plus its own group-aware guard.
process-wrap = { version = "=9.1.0", default-features = false, features = [
    "tokio1",
    "process-group",
    "job-object",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.47", features = ["process", "io-util", "sync", "time", "rt"] }
tokio-util = "0.7"
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
] }

[dev-dependencies]
assert_cmd = "2.0"
futures-util = "0.3"
libtest-mimic = "0.8"
predicates = "3.1"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.47", features = ["macros"] }
